# ai-drone-toolkit

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
examples/: README.md  analyze_ulog.py  flight_health_check.py  sitl_connect_state.py  sitl_fly_path.py  sitl_fly_survey.py  sitl_multi_drone.py  sitl_takeoff_land.py
tools/px4-sitl-mcp/: Makefile  README.md  pyproject.toml
tools/px4-sitl-mcp/.cursor/: mcp.json
tools/px4-sitl-mcp/src/px4_sitl_mcp/: __init__.py  config.py  drone.py  server.py
tools/px4-sitl-mcp/tests/: test_drone_connect.py  test_fleet.py  test_goto_validation.py
tools/px4-ulog-mcp/: .gitignore  Makefile  README.md  pyproject.toml
tools/px4-ulog-mcp/.cursor/: mcp.json
tools/px4-ulog-mcp/src/px4_ulog_mcp/: __init__.py  server.py  ulog_tools.py
tools/px4-ulog-mcp/tests/: test_tools.py
