[project]
name = "px4-sitl-mcp"
version = "0.1.0"
description = "Simulation-only MCP server for commanding PX4 SITL drones"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0",
    "mavsdk>=3.15",
    "robotto-drone-core",
]

[project.scripts]
px4-sitl-mcp = "px4_sitl_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/px4_sitl_mcp"]
