[project]
name = "px4-ulog-mcp"
version = "0.1.0"
description = "MCP server for analyzing PX4 ULog (.ulg) flight logs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.0",
    "pyulog>=1.2.2",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
px4-ulog-mcp = "px4_ulog_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/px4_ulog_mcp"]
